--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,1 +1,6 @@
-<h3>Cart</h3>
+{% extends 'store/main.html' %}
+{% load static %}
+{% block content %}
+    <h3>Cart</h3>
+    
+{% endblock content %}
