--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,6 +1,30 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-    <h3>Store</h3>
-    
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+
+            </div>
+
+        </div>
+    </div>
 {% endblock content %}
