--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -6,6 +6,10 @@
             <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
+                <hr>
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+		        <a class="btn btn-outline-success" href="#">View</a>
+		        <h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
 
             </div>
         </div>
@@ -14,6 +18,10 @@
             <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
+                <hr>
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+		        <a class="btn btn-outline-success" href="#">View</a>
+		        <h4 style="display: inline-block; float: right"><strong>$15</strong></h4>
 
             </div>
         </div>
@@ -22,6 +30,10 @@
             <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
             <div class="box-element product">
                 <h6><strong>Product</strong></h6>
+                <hr>
+                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
+		        <a class="btn btn-outline-success" href="#">View</a>
+		        <h4 style="display: inline-block; float: right"><strong>$10</strong></h4>
 
             </div>
 
