--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -2,41 +2,19 @@
 {% load static %}
 {% block content %}
     <div class="row">
+        {% for product in products %}
         <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
+            <img class="thumbnail" src="{{product.image.url}}">
             <div class="box-element product">
-                <h6><strong>Product</strong></h6>
+                <h6><strong>{{product.name}}</strong></h6>
                 <hr>
                 <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
 		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
+		        <h4 style="display: inline-block; float: right">
+                ${{product.price|floatformat:2}}</h4>
 
             </div>
         </div>
-
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
-		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float: right"><strong>$15</strong></h4>
-
-            </div>
-        </div>
-
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
-		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float: right"><strong>$10</strong></h4>
-
-            </div>
-
-        </div>
+        {% endfor %}
     </div>
 {% endblock content %}
