--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -10,8 +10,8 @@
 
             <table class="table">
                 <tr>
-                    <th><h5>Items: <strong>3</strong></h5></th>
-                    <th><h5>Total: <strong>$43</strong></h5></th>
+                    <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
+                    <th><h5>Total: <strong>${{order.get_cart_total|floatformat:2}}</strong></h5></th>
                     <th>
                         <a style="float:right; margin:5px" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
                     </th>
@@ -29,20 +29,22 @@
 		    <div style="flex:1"><strong>Total</strong></div>
 	    </div>
 	
+        {% for item in items %}
         <div class="cart-row">
-            <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-            <div style="flex:2"><p>Product 1</p></div>
-            <div style="flex:1"><p>$20</p></div>
+            <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+            <div style="flex:2">{{item.product.name}}</div>
+            <div style="flex:1">${{item.product.price|floatformat:2}}</div>
             <div style="flex:1">
-                <p class="quantity">2</p>
+                <p class="quantity">{{item.quantity}}</p>
                 <div class="quantity">
                     <img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
             
                     <img class="chg-quantity" src="{% static  'images/arrow-down.png' %}">
                 </div>
             </div>
-            <div style="flex:1"><p>$32</p></div>
+            <div style="flex:1">${{item.get_total}}</div>
             </div>
         </div>
+        {% endfor %}
 </div>
 {% endblock content %}
