user and anonymous user working

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -10,6 +10,9 @@
 
            <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
+           <script type="text/javascript">
+              var user = '{{request.user}}'
+           </script>
     </head>
 <body>
 
@@ -52,6 +55,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+
 
 </body>
 </html>
