--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -52,7 +52,7 @@
             <a href="{% url 'cart' %}">
                <img  id="cart-icon" src="{% static 'images/cart.png' %}">
            </a>
-           <p id="cart-total">0</p>
+           <p id="cart-total">{{cartItems}}</p>
         </div>
       </nav>
 
