--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -10,8 +10,9 @@
                 <hr>
                 <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
 		        <a class="btn btn-outline-success" href="#">View</a>
-		        <h4 style="display: inline-block; float: right">
-                ${{product.price|floatformat:2}}</h4>
+		        <h4 style="display: inline-block;float: right">
+                    ${{product.price|floatformat:2}}
+                </h4>
 
             </div>
         </div>
