--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -67,4 +67,12 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+		//var shipping = '{{order.shipping}}'
+	
+		//if(shipping == 'False'){
+			//document.getElementById('shipping-info').innerHTML = ''
+		//}
+	</script>
 {% endblock content %}
