make payment option

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -43,6 +43,7 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
+				<button id="make-payment">Make Payment</button>
 			</div>
 			
 		</div>
@@ -69,10 +70,12 @@
 	</div>
 
 	<script type="text/javascript">
-		//var shipping = '{{order.shipping}}'
-	
-		//if(shipping == 'False'){
-			//document.getElementById('shipping-info').innerHTML = ''
-		//}
+		var form = document.getElementById('form')
+		form.addEventListener('submit', function(e){
+	    	e.preventDefault()
+	    	console.log('Form Submitted...')
+	    	document.getElementById('form-button').classList.add("hidden");
+	    	document.getElementById('payment-info').classList.remove("hidden");
+	    })
 	</script>
 {% endblock content %}
