hiding email box for logged in users

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -70,6 +70,17 @@
 	</div>
 
 	<script type="text/javascript">
+		if (user != 'AnonymousUser'){
+			document.getElementById('user-info').innerHTML = ''
+		}
+	   
+	   if (shipping == 'False' && user != 'AnonymousUser'){
+		   //Hide entire form if user is logged in and shipping is false
+			   document.getElementById('form-wrapper').classList.add("hidden");
+			   //Show payment if logged in user wants to buy an item that does not require shipping
+			   document.getElementById('payment-info').classList.remove("hidden");
+	   }
+
 		var form = document.getElementById('form')
 		form.addEventListener('submit', function(e){
 	    	e.preventDefault()
@@ -77,5 +88,13 @@
 	    	document.getElementById('form-button').classList.add("hidden");
 	    	document.getElementById('payment-info').classList.remove("hidden");
 	    })
+
+		document.getElementById('make-payment').addEventListener('click', function(e){
+			submitFormData()
+		})
+
+		function submitFormData(){
+			console.log('Payment button clicked..')
+		}
 	</script>
 {% endblock content %}
