--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -71,7 +71,7 @@
 
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
-		var total = '{{order.get_cart_total|floatformat:2}}'
+		var total = '{{order.get_cart_total}}'
 
 		if(user != 'AnonymousUser'){
 			document.getElementById('user-info').innerHTML = ''
