--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -29,6 +29,30 @@
                 return cookieValue;
             }
             var csrftoken = getToken('csrftoken')
+
+
+            function getCookie(name){
+              var cookieArr = document.cookie.split(";");
+
+              for(var i =0; i< cookieArr.length; i++){
+                var cookiePair = cookieArr[i].split("=");
+
+                if(name == cookiePair[0].trim()){
+                  return decodeURIComponent(cookiePair[1]);
+                }
+              }
+              return null;
+            }
+
+            var cart = JSON.parse(getCookie('cart'))
+            if(cart == undefined){
+              cart = {}
+              console.log('Cart was created!')
+              document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+            }
+            
+            console.log('Cart:', cart)
           </script>
     </head>
 <body>
