cart being cleared

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -137,6 +137,10 @@
 			.then((data) => {
 				console.log('Success:', data);
 				alert('Transaction complete');
+				
+				cart = {}
+				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
 				window.location.href = "{% url 'store' %}"
 
 			})
