--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
     <head>
-          <title>Ecom</title>
+          <title>Agri-Market</title>
 
           <link rel="stylesheet" href="{% static 'css/main.css' %}" />
            
@@ -58,7 +58,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
+        <a class="navbar-brand" href="{% url 'store' %}">Agri-Market</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
