--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -43,7 +43,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make Payment</button>
+				<div id="paypal-button-container"></div>
+				<!---<button id="make-payment">Make Payment</button>--->
 			</div>
 			
 		</div>
@@ -69,6 +70,39 @@
 		</div>
 	</div>
 
+	<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+
+	<script>
+		// Render the PayPal button into #paypal-button-container
+		paypal.Buttons({
+
+			style:{
+				shape:'pill',
+			},
+	
+			// Set up the transaction
+			createOrder: function(data, actions) {
+				return actions.order.create({
+					purchase_units: [{
+						amount: {
+							value: '0.01'
+						}
+					}]
+				});
+			},
+	
+			// Finalize the transaction
+			onApprove: function(data, actions) {
+				return actions.order.capture().then(function(details) {
+					// Show a success message to the buyer
+					alert('Transaction completed by ' + details.payer.name.given_name + '!');
+				});
+			}
+	
+	
+		}).render('#paypal-button-container');
+	</script>
+
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
 		var total = '{{order.get_cart_total}}'
@@ -93,9 +127,12 @@
 			document.getElementById('payment-info').classList.remove('hidden')
 			})
 
+
+		/*
 		document.getElementById('make-payment').addEventListener('click', function(e){
 			submitFormData()
 		})
+		*/
 
 		function submitFormData(){
 			console.log('Payment button clicked')
