paypal buttons connected to account

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -70,7 +70,8 @@
 		</div>
 	</div>
 
-	<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+	<script src="https://www.paypal.com/sdk/js?client-id=AdrDD2TL6N4hjJQ-EDTOyvMhqqxwWnMmNwj54DQt
+	DXrPFRx-BTZqEhECwwinsXMLnTBFuHInCX6dbNrg&currency=USD"></script>
 
 	<script>
 		// Render the PayPal button into #paypal-button-container
