sign up and sign in

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -65,7 +65,7 @@
 				{% endfor %}
 
 				<h5>Items: {{order.get_cart_items}}</h5>
-				<h5>Total: ${{order.get_cart_total|floatformat:2}}</h5>
+				<h5>Total: UGX {{order.get_cart_total|floatformat:2}}</h5>
 			</div>
 		</div>
 	</div>
