--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -12,7 +12,7 @@
                 <table class="table">
                     <tr>
                         <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-                        <th><h5>Total: <strong>${{order.get_cart_total|floatformat:2}}</strong></h5></th>
+                        <th><h5>Total: <strong>UGX {{order.get_cart_total|floatformat:2}}</strong></h5></th>
                         <th>
                             <a style="float:right; margin:5px" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
                         </th>
@@ -35,7 +35,7 @@
             <div class="cart-row">
                 <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
                 <div style="flex:2">{{item.product.name}}</div>
-                <div style="flex:1">${{item.product.price|floatformat:2}}</div>
+                <div style="flex:1">UGX {{item.product.price|floatformat:2}}</div>
                 <div style="flex:1">
                     <p class="quantity">{{item.quantity}}</p>
                     <div class="quantity">
@@ -44,7 +44,7 @@
                         <img data-product="{{item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'images/arrow-down.png' %}">
                     </div>
                 </div>
-                    <div style="flex:1">${{item.get_total}}</div>
+                    <div style="flex:1">UGX {{item.get_total}}</div>
             </div>
             {% endfor %}
         </div>
