--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -11,7 +11,7 @@
                 <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
 		        <a class="btn btn-outline-success" href="#">View</a>
 		        <h4 style="display: inline-block;float: right">
-                    ${{product.price|floatformat:2}}
+                    UGX {{product.price|floatformat:2}}
                 </h4>
 
             </div>
