--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -104,6 +104,10 @@
 					</form>
 
 				</div>
+
+				{% for message in messages %}
+					<p id="messages">{{message}}</p>
+				{% endfor %}
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
