--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -107,7 +107,9 @@
 				   		</div>
 					</form>
 				</div>
-		
+
+				{{form.errors}}
+				
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
