--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -71,12 +71,18 @@
           </ul>
 
           <div class="form-inline my-2 my-lg-0">
+            
+            {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="btn btn-warning">Log Out</a>
+            {% else %}
             <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+            {% endif %}
+              
             
             <a href="{% url 'cart' %}">
                <img  id="cart-icon" src="{% static 'images/cart.png' %}">
            </a>
-           <p id="cart-total">{{cartItems}}</p>
+           <p id="cart-total">{{cartItems|length}}</p>
         </div>
       </nav>
 
