--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -4,7 +4,8 @@
      <div class="row">
 		<div class="col-lg-6">
 			<div class="box-element" id="form-wrapper">
-				<form id="form">
+				<form id="form" method="post">
+					{% csrf_token %}
 					<div id="user-info">
 						<div class="form-field">
 							<input required class="form-control" type="text" name="name" placeholder="Name..">
